Fix Deck component overflowing

--- a/src/styles/Deck.css
+++ b/src/styles/Deck.css
@@ -16,5 +16,4 @@
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 1vmin;
-	width: 100dvw;
 }
